--- a/src/i18n/languages/english.json
+++ b/src/i18n/languages/english.json
@@ -19,6 +19,6 @@
     "noc_move_out_dashboard": "NOC MOVE OUT DASHBOARD",
     "noc_maintenance": "NOC MAINTENANCE",
     "noc_maintenance_dashboard": "NOC MAINTENANCE DASHBOARD",
-    "report_issue": "REPORT_ISSUE",
+    "report_issue": "REPORT ISSUE",
     "btn_messages": "MESSAGES"
 }
